--- a/resultados_edomex.Rmd
+++ b/resultados_edomex.Rmd
@@ -2,7 +2,7 @@
 title: "Resultados del PREP en el Estado de México 2017"
 author: "Andrés Lajous"
 date: "7/6/2017"
-output: html_document
+output: md_document
 ---
 
 Entre ayer y hoy he encontrado varios tuits, mensajes, y videos de gente que sostiene que si copia y pega de la página de intenet del PREP a Excel los resultados electorales, "se ajustan los datos" mostrando que hay un "fraude" que le quita la victoria a Delfina Gómez y se la de a Alfredo Del Mazo. No sé cuál vaya a ser el resultado de la elección una vez que se hagan los computos distritales. Lo que sí se, es que copiar y pegar de una página de internet a Excel es una mala idea si uno quiere hacer cálculos a partir de datos estadísticos. Javier Aparicio muy brevemente ya explicó el problema <a href = "https://javieraparicio.net/2017/06/06/prep-edomex-2017/">acá</a>. 
