--- a/resultados_edomex.Rmd
+++ b/resultados_edomex.Rmd
@@ -4,6 +4,7 @@ author: "Andrés Lajous"
 date: "7/6/2017"
 output: md_document
 ---
+### Resultados del PREP en el Estado de México 2017
 
 Entre ayer y hoy he encontrado varios tuits, mensajes, y videos de gente que sostiene que si copia y pega de la página de intenet del PREP a Excel los resultados electorales, "se ajustan los datos" mostrando que hay un "fraude" que le quita la victoria a Delfina Gómez y se la de a Alfredo Del Mazo. No sé cuál vaya a ser el resultado de la elección una vez que se hagan los computos distritales. Lo que sí se, es que copiar y pegar de una página de internet a Excel es una mala idea si uno quiere hacer cálculos a partir de datos estadísticos. Javier Aparicio muy brevemente ya explicó el problema <a href = "https://javieraparicio.net/2017/06/06/prep-edomex-2017/">acá</a>. 
 
@@ -36,14 +37,14 @@ resultados <- prep_relevante %>%
   gather(candidato, votos, jvm:tco) %>% # paso el marco de horizontal a vertical
   group_by(candidato) %>% 
   summarise(votos = sum(votos), total_votos = sum(total_votos)) %>% 
-  mutate(resultados = votos/total_votos*100) %>% # calcular porcentaje de votos
-  arrange(desc(resultados)) %>% 
+  mutate(porcentaje = votos/total_votos*100) %>% # calcular porcentaje de votos
+  arrange(desc(porcentaje)) %>% 
   mutate(candidato = factor(candidato, candidato))
 
 knitr::kable(resultados)
 
 ##gráfica con los resultados electorales
-ggplot(resultados, aes(candidato, resultados)) + geom_bar(stat = "identity", fill = "#F8766D") +
+ggplot(resultados, aes(candidato, porcentaje)) + geom_bar(stat = "identity", fill = "#F8766D") +
   ggtitle("Elecciones EdoMex 2017: porcentaje de votación recibido por candidata/o.")
 
 ```
