--- a/resultados_edomex.Rmd
+++ b/resultados_edomex.Rmd
@@ -6,7 +6,7 @@ output: md_document
 ---
 ### Resultados del PREP en el Estado de México 2017
 
-Entre ayer y hoy he encontrado varios tuits, mensajes, y videos de gente que sostiene que si copia y pega de la página de intenet del PREP a Excel los resultados electorales, "se ajustan los datos" mostrando que hay un "fraude" que le quita la victoria a Delfina Gómez y se la de a Alfredo Del Mazo. No sé cuál vaya a ser el resultado de la elección una vez que se hagan los computos distritales. Lo que sí se, es que copiar y pegar de una página de internet a Excel es una mala idea si uno quiere hacer cálculos a partir de datos estadísticos. Javier Aparicio muy brevemente ya explicó el problema <a href = "https://javieraparicio.net/2017/06/06/prep-edomex-2017/">acá</a>. 
+Entre ayer y hoy he encontrado varios tuits, mensajes, y videos de gente que sostiene que si copia y pega de la página de intenet del PREP a Excel los resultados electorales, estos "se ajustan los datos" mostrando que hay un "fraude" que le quita la victoria a Delfina Gómez y se la de a Alfredo Del Mazo. No sé cuál vaya a ser el resultado de la elección una vez que se hagan los computos distritales. Lo que sí se, es que copiar y pegar de una página de internet a Excel es una mala idea si uno quiere hacer cálculos a partir de datos estadísticos. Javier Aparicio muy brevemente ya explicó el problema <a href = "https://javieraparicio.net/2017/06/06/prep-edomex-2017/">acá</a>. 
 
 Aunado a los problemas que señala Aparicio, por muchas razones yo no uso Excel, y prefiero usar el programa de manejo de bases de datos "R". Una de las virtudes de este programa es que el código con el se mueven y modifican los datos se puede hacer público y cualquiera puede replicarlo. Es decir, la lectura, agregación y manipulación de los datos deja rastro. Para ilustrar esta ventaja de "R" sobre Excel, pero sobre todo para mostrar que no hay nada raro en términos de que aparezcan y desaparezcan votos entre la página de internet del PREP y la base de datos, pongo aquí el código con el que llegué al mismo resultado final que el PREP así como una gráfica para ilustarlos. 
 
